--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -21,3 +21,43 @@ li a {
 li a:hover {
   background-color: #111;
 }
+
+ul a {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 15px;
+  padding: 10px;
+  letter-spacing: 1px;
+}
+
+ul li {
+  position: relative;
+  float: left;
+  margin: 0;
+  padding: 0;
+}
+
+ul ul {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: #eee;
+  padding: 0;
+}
+
+ul ul li {
+  float: none;
+  width: 150px;
+}
+
+ul ul a {
+  line-height: 120%;
+  padding: 10px 15px;
+}
+
+ul li:hover > ul {
+  display: list-item;
+}
