--- a/src/components/Items/ItemList.css
+++ b/src/components/Items/ItemList.css
@@ -1,6 +1,7 @@
-.ItemListContainer {
+.Item {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	margin: 10px;
+	justify-content: space-evenly;
 }
